tests/integration/commands/snapshots/integration__commands__format__uglify_ARRAY_SUBARRAYS.snap
---
source: tests/integration/commands/format.rs
expression: output.stdout
---
[["a"],[true,false]]
