tests/integration/commands/snapshots/integration__commands__format__uglify_NESTED_OBJECT_SINGLE_KEY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---

            {"rust": 
            {"rust": 
            {"rust": 
            {"rust": null
            }
            }
            }
            }   
        
stdout ---
{"rust":{"rust":{"rust":{"rust":null}}}}

stderr ---
